--- a/cog/pom.xml
+++ b/cog/pom.xml
@@ -101,15 +101,9 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.zeroturnaround
-										</groupId>
-										<artifactId>
-											jrebel-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.1.3,)
-										</versionRange>
+										<groupId>org.zeroturnaround</groupId>
+										<artifactId>jrebel-maven-plugin</artifactId>
+										<versionRange>[1.1.3,)</versionRange>
 										<goals>
 											<goal>generate</goal>
 										</goals>
