--- a/parent/webx/src/main/webapp/WEB-INF/web.xml
+++ b/parent/webx/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>Cog</display-name>
   <session-config>
     <session-timeout>30</session-timeout>
@@ -27,7 +27,6 @@
       <role-name>cog_admin</role-name>
     </auth-constraint>
   </security-constraint>
-  
   <security-constraint>
     <display-name>User Servlets</display-name>
     <web-resource-collection>
@@ -50,15 +49,12 @@
       <role-name>cog_user</role-name>
     </auth-constraint>
   </security-constraint>
-  
   <security-role>
     <role-name>cog_admin</role-name>
   </security-role>
   <security-role>
     <role-name>cog_user</role-name>
   </security-role>
-  
-  
   <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
@@ -69,5 +65,4 @@
   <welcome-file-list>
     <welcome-file>xindex.jsp</welcome-file>
   </welcome-file-list>
- 
 </web-app>
