--- a/Anyone-Services-Parent/pom.xml
+++ b/Anyone-Services-Parent/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.anyone.services</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>services-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -20,13 +20,13 @@
 		<repository>
 			<id>releases</id>
 			<name>Releases</name>
-			<url>http://192.168.1.64:8081/nexus-2.1.2/content/repositories/releases/</url>
+			<url>http://192.168.1.66:8081/nexus-2.1.2/content/repositories/releases/</url>
 		</repository>
 		<!-- use the following if you ARE using a snapshot version. -->
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Snapshots</name>
-			<url>http://192.168.1.64:8081/nexus-2.1.2/content/repositories/snapshots/</url>
+			<url>http://192.168.1.66:8081/nexus-2.1.2/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
