--- a/p_b_v1/pom.xml
+++ b/p_b_v1/pom.xml
@@ -1,18 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.trabajo.test</groupId>
-  <artifactId>p_b_v1</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.trabajo.test</groupId>
+	<artifactId>p_b_v1</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<parent>
-		<groupId>com.trabajo.parent</groupId>
-		<artifactId>parent_1</artifactId>
-		<version>1.0.0</version>
+		<groupId>com.colin</groupId>
+		<artifactId>simple-jar-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.trabajo.test</groupId>
-  		<artifactId>p_c_v1</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>com.trabajo.test</groupId>
+			<artifactId>p_c_v1</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
