--- a/ProcessBugFixv2/pom.xml
+++ b/ProcessBugFixv2/pom.xml
@@ -6,9 +6,9 @@
 	<version>2.0.0-SNAPSHOT</version>
 	
 	<parent>
-		<groupId>com.trabajo.parent</groupId>
-		<artifactId>parent_1</artifactId>
-		<version>1.0.0</version>
+		<groupId>com.colin</groupId>
+		<artifactId>simple-jar-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	
 	<dependencies>
@@ -37,7 +37,7 @@
       <plugin>
       	<groupId>com.cog</groupId>
 		<artifactId>cog-maven-plugin</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.3-SNAPSHOT</version>
         <executions>
           <execution>
             <phase>install</phase>
